@@ -4,6 +4,7 @@ phpAdsNew - ChangeLog
 CVS
 			+ Misc changes
 			  - 2007-01-03:  Maintenance task now is performed during banner delivery if a cron job isn't correctly set up. The new feature is enabled by default and can be disabled in the administrator settings screen  (Matteo)
+			  - 2007-01-09:  Added remote logo in the admin interface so that logo is automatically updated in case of name changes  (Matteo)
 
 			+ Misc bugfixes
 			  - 2006-11-14:  Campaign-edit wasn't correctly working with MySQL 3.x anymore  (Matteo)
